--- a/definition.yml
+++ b/definition.yml
@@ -1,6 +1,7 @@
 name: ucp2-vanilla-fixed-aiv
+display-name: ucp2-vanilla-fixed-aiv-applied
 display-name: "Vanilla Fixed Castles"
-author: UCP-Team
+author: Evrey & UCP-Team
 version: 2.15.1
 dependencies:
   ucp2-ai-files: ^2.15.1
